--- a/web/src/Sidebar.css
+++ b/web/src/Sidebar.css
@@ -48,6 +48,15 @@ aside form .input-block input {
   border-bottom: 1px solid #eee;
 }
 
+aside form .input-block textarea {
+  width: 100%;
+  height: 54px;
+  font-size: 14px;
+  color: #666;
+  border: 0;
+  border-bottom: 1px solid #eee;
+}
+
 aside form button[type=submit] {
   width: 100%;
   border: 0;
